[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/FallingPlatform.gd" type="Script" id=1]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/colored_transparent_fixed.png-283f78511b4a6b33f0a339a4356a77fb.stex"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 4 )

[node name="FallingPlatform" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 1 )
vframes = 32
hframes = 32
frame = 178

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -4 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
